@@ -639,4 +639,5 @@ Changes since version 1.5-18
 
   * pcdtest: small efficiency enhancement (calc only lower.tri of rhos)
   * pos.index (internal, not exported): new func to determine column numbers of index vars in pdata.frame
+  * cosmetics: some extraction/subsetting functions doubled 'pseries' in the class of returned value (fixed now)
 	
